--- a/index.html
+++ b/index.html
@@ -32,6 +32,52 @@
     </header>
 
 
+    <section id="splash">
+        <div class="sectionwrapper">
+            <img src="IMG_1697.jpeg" alt="blomster">
+            <div class="col_logo"> </div>
+        </div>
+    </section>
+
+
+    <section id="web">
+        <div class="sectionwrapper">
+            <div class="col_top">
+                <img src="web_visu.png" alt="computer iphone">
+            </div>
+            <div class="col_bottom"></div>
+        </div>
+    </section>
+
+    <section id="ux">
+        <div class="sectionwrapper">
+            <div class="col_wide"></div>
+            <div class="col_narrow"></div>
+        </div>
+    </section>
+
+    <section id="animation">
+        <div class="sectionwrapper">
+            <div class="col_wide"></div>
+            <div class="col_narrow"></div>
+        </div>
+    </section>
+
+    <section id="indhold">
+        <div class="sectionwrapper">
+            <div class="col_wide"></div>
+            <div class="col_narrow"></div>
+        </div>
+    </section>
+
+    <section id="cv">
+        <div class="sectionwrapper">
+            <div class="col_top"></div>
+            <div class="col_bottom"></div>
+        </div>
+    </section>
+
+
     <script src=""></script>
 </body>
 
