--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josefine Cecilie Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -34,25 +38,64 @@
 
     <section id="splash">
         <div class="sectionwrapper">
-            <img src="IMG_1697.jpeg" alt="blomster">
-            <div class="col_logo"> </div>
+            <img src="billeder/splash.png" alt="logo">
+            <div class="col_logo">
+                <!--
+                <h1>JOSEFINE CECILIE</h1>
+                <p>PORTFOLIO</p>
+-->
+            </div>
         </div>
     </section>
+    <section id="scroll_front">
 
-
-    <section id="web">
         <div class="sectionwrapper">
-            <div class="col_top">
-                <img src="web_visu.png" alt="computer iphone">
+
+            <!--            <div class="col_shelf"></div>-->
+            <div class="scroll">
+                <div class="book_web">
+                    <a href="web.html"><img src="billeder/Tegnebr%C3%A6t%201.svg" alt="grundlæggende web"></a>
+                </div>
+                <div class="book_ux">
+                    <a href="ux.html"><img src="billeder/Tegnebr%C3%A6t%209.svg" alt="grundlæggende ux"></a>
+                </div>
+                <div class="book_ani">
+                    <a href="ani.html"><img src="billeder/Tegnebr%C3%A6t%2010.svg" alt="grundlæggende animation"></a>
+                </div>
+                <div class="book_indhold">
+                    <a href="content.html"><img src="billeder/Tegnebr%C3%A6t%2011.svg" alt="grundlæggende indhold"></a>
+                </div>
+                <div class="book_cv">
+                    <a href="cv.html"><img src="billeder/cv.svg" alt="gcv"></a>
+                </div>
+
+
+
             </div>
-            <div class="col_bottom"></div>
+        </div>
+
+
+    </section>
+    <!--
+    <section id="web">
+        <h1>Grundlæggende web</h1>
+        <div class="sectionwrapper">
+            <div class="col">
+                <img src="billeder/web_visu.png" alt="computer iphone"> </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+            </div>
         </div>
     </section>
 
     <section id="ux">
         <div class="sectionwrapper">
-            <div class="col_wide"></div>
-            <div class="col_narrow"></div>
+            <div class="col">
+                <img src="billeder/web_visu.png" alt="computer iphone"> </div>
+            <div class="col">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+            </div>
+        </div>
         </div>
     </section>
 
@@ -75,7 +118,7 @@
             <div class="col_top"></div>
             <div class="col_bottom"></div>
         </div>
-    </section>
+    </section>-->
 
 
     <script src=""></script>
