animation og ux

--- a/ux.html
+++ b/ux.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tema 3/UX</title>
+    <title>Tema 2/Web</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
     <header class="header">
         <nav>
 
@@ -31,7 +32,36 @@
 
     </header>
 
+    <h1>Grundlæggende UX</h1>
+    <section id="ux_1">
 
+        <div class="sectionwrapper">
+            <div class="col">
+                <a href="https://xd.adobe.com/view/0b421a49-935b-4f98-4cfa-8840f0fc174d-7d73/"><img src="billeder/ux_1.svg" alt="ux iphone"></a> </div>
+            <div class="col">
+                <br><br><br>
+                <h2>Prototype Beat Mugs</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+
+                <a href="https://xd.adobe.com/view/0b421a49-935b-4f98-4cfa-8840f0fc174d-7d73/">Prototype</a>
+
+            </div>
+        </div>
+    </section>
+    <section id="ux_2">
+        <div class="sectionwrapper">
+            <div class="col">
+                <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/"><img src="billeder/ux_2.svg" alt="ux iphone"></a> </div>
+            <div class="col">
+                <br><br><br>
+                <h2>Designsprint</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+
+                <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/">Designsprint</a>
+
+            </div>
+        </div>
+    </section>
     <script src=""></script>
 </body>
 
