rettelser på alle sider og css 1

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
 
 
     <script src=""></script>
+
+    <footer>
+        <p>Lavet af Josefine Cecilie Larsen</p>
+    </footer>
 </body>
 
 </html>
