--- a/content.html
+++ b/content.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tema 5/Indhold</title>
+    <title>Tema 4/Animation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -30,6 +30,25 @@
         </nav>
 
     </header>
+
+    <h1>Grundlæggende Indhold</h1>
+    <section id="content_1">
+        <div class="sectionwrapper">
+            <div class="col">
+                <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html"><img src="billeder/ind_1.svg" alt="animation spil computer"></a>
+                <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/books.html#books"><img src="billeder/ind_2.svg" alt="computer iphone redesign">
+                </a>
+            </div>
+            <div class="col">
+                <h2>Redesign af NW Gallery</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+
+                <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html">NW gallery</a>
+
+            </div>
+        </div>
+    </section>
+
 
 
     <script src=""></script>
