--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <section id="splash">
         <div class="sectionwrapper">
-            <img src="billeder/splash.png" alt="logo">
+            <img src="billeder/splash.svg" alt="logo">
             <div class="col_logo">
                 <!--
                 <h1>JOSEFINE CECILIE</h1>
@@ -52,19 +52,19 @@
             <!--            <div class="col_shelf"></div>-->
             <div class="scroll">
                 <div class="book_web">
-                    <a href="web.html"><img src="billeder/Tegnebr%C3%A6t%201.svg" alt="grundlæggende web"></a>
+                    <a href="web.html"><img src="billeder/SVG/web_book.svg" alt="grundlæggende web"></a>
                 </div>
                 <div class="book_ux">
-                    <a href="ux.html"><img src="billeder/Tegnebr%C3%A6t%209.svg" alt="grundlæggende ux"></a>
+                    <a href="ux.html"><img src="billeder/SVG/ux_book.svg" alt="grundlæggende ux"></a>
                 </div>
                 <div class="book_ani">
-                    <a href="ani.html"><img src="billeder/Tegnebr%C3%A6t%2010.svg" alt="grundlæggende animation"></a>
+                    <a href="ani.html"><img src="billeder/SVG/ani_book.svg" alt="grundlæggende animation"></a>
                 </div>
                 <div class="book_indhold">
-                    <a href="content.html"><img src="billeder/Tegnebr%C3%A6t%2011.svg" alt="grundlæggende indhold"></a>
+                    <a href="content.html"><img src="billeder/SVG/indhold_book.svg" alt="grundlæggende indhold"></a>
                 </div>
                 <div class="book_cv">
-                    <a href="cv.html"><img src="billeder/cv.svg" alt="gcv"></a>
+                    <a href="cv.html"><img src="billeder/SVG/cv_book.svg" alt="cv"></a>
                 </div>
             </div>
         </div>
