--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
 
 </head>
@@ -38,12 +39,9 @@
 
     <section id="splash">
         <div class="sectionwrapper">
-            <img src="billeder/splash.svg" alt="logo">
+            <img src="billeder/Web%201920%20%E2%80%93%201.svg" alt="logo">
             <div class="col_logo">
-                <!--
-                <h1>JOSEFINE CECILIE</h1>
-                <p>PORTFOLIO</p>
--->
+
             </div>
         </div>
     </section>
@@ -51,12 +49,21 @@
         <div class="sectionwrapper">
             <!--            <div class="col_shelf"></div>-->
             <div class="scroll">
+
                 <div class="book_web">
-                    <a href="web.html"><img src="billeder/SVG/web_book.svg" alt="grundlæggende web"></a>
+                    <a href="web.html"><img src="billeder/SVG/1.svg" alt="grundlæggende web"></a>
                 </div>
                 <div class="book_ux">
-                    <a href="ux.html"><img src="billeder/SVG/ux_book.svg" alt="grundlæggende ux"></a>
+                    <a href="ux.html"><img src="billeder/SVG/2.svg" alt="grundlæggende ux"></a>
                 </div>
+                <div class="book_ani">
+                    <a href="ani.html"><img src="billeder/SVG/3.svg" alt="grundlæggende animation"></a>
+                </div>
+                <div class="book_indhold">
+                    <a href="content.html"><img src="billeder/SVG/4.svg" alt="grundlæggende indhold"></a>
+                </div>
+                <!--
+
                 <div class="book_ani">
                     <a href="ani.html"><img src="billeder/SVG/ani_book.svg" alt="grundlæggende animation"></a>
                 </div>
@@ -66,6 +73,8 @@
                 <div class="book_cv">
                     <a href="cv.html"><img src="billeder/SVG/cv_book.svg" alt="cv"></a>
                 </div>
+-->
+
             </div>
         </div>
     </section>
@@ -73,9 +82,7 @@
 
     <script src=""></script>
 
-    <footer>
-        <p>Lavet af Josefine Cecilie Larsen</p>
-    </footer>
+
 </body>
 
 </html>
