--- a/web.html
+++ b/web.html
@@ -32,19 +32,33 @@
     </header>
 
 
-    <section id="web">
-        <h1>Grundlæggende web</h1>
-        <div class="sectionwrapper">
-            <div class="col">
-                <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html"><img src="billeder/web_visu.png" alt="computer iphone"></a> </div>
+    <section id="scroll_web_1">
+        <!--            <div class="col_shelf"></div>-->
+        <div class="scroll_web">
 
-            <div class="col">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+
+            <div class="deathmetal">
+                <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html"><img src="billeder/SVG/am_mac.svg" alt="imac"></a><br>
+            </div>
+            <div class="deathmetal_2">
+                <h2>02.04.02 Responsive site/Stilart site 'American Magazine'</h2>
+                <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
+                    Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
+                    Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
+                    Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
+                    Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p>
 
                 <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
                 <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a>
+
             </div>
+
+            <!--                    <a href="web.html"><img src="billeder/SVG/baggrund_2.svg" alt="grundlæggende web"></a>-->
         </div>
+
+
+
+
     </section>
     <script src=""></script>
 </body>
