--- a/web.html
+++ b/web.html
@@ -31,33 +31,59 @@
 
     </header>
 
-
-    <section id="scroll_web_1">
-        <!--            <div class="col_shelf"></div>-->
-        <div class="scroll_web">
+    <h1>GRUNDLÆGGENDE WEB</h1>
+    <section id="web_1">
 
 
-            <div class="deathmetal">
-                <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html"><img src="billeder/SVG/am_mac.svg" alt="imac"></a><br>
+        <div class="baggrund_1">
+            <div class="post_it">
+                <img src="billeder/SVG/Tegnebr%C3%A6t%2018.svg">
+
+                <div class="text">
+                    <h2>02.04.02 Responsive site</h2>
+                    <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
+                        Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
+                        Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
+                        Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
+                        Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
+                </div>
             </div>
-            <div class="deathmetal_2">
-                <h2>02.04.02 Responsive site/Stilart site 'American Magazine'</h2>
-                <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
-                    Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
-                    Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
-                    Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
-                    Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p>
-
-                <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
-                <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a>
-
-            </div>
-
-            <!--                    <a href="web.html"><img src="billeder/SVG/baggrund_2.svg" alt="grundlæggende web"></a>-->
         </div>
+    </section>
+    <section id="web_2">
 
+        <div class="baggrund_2">
+            <div class="post_it">
+                <img src="billeder/SVG/Tegnebr%C3%A6t%2018.svg">
 
+                <div class="text">
 
+                    <h2>02.04.02 Responsive site</h2>
+                    <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
+                        Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
+                        Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
+                        Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
+                        Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="web_3">
+
+        <div class="baggrund_3">
+            <div class="post_it">
+                <img src="billeder/SVG/Tegnebr%C3%A6t%2018.svg">
+
+                <div class="text">
+                    <h2>02.04.02 Responsive site</h2>
+                    <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
+                        Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
+                        Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
+                        Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
+                        Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
+                </div>
+            </div>
+        </div>
 
     </section>
     <script src=""></script>
